[package]
name = "off-imsoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3.0"
json = "0.12.4"
url = "2.4.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
urlencoding = "2.1.3"
geocoding = "0.4.0"
